--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <label for="firstName">First Name:</label>
         <input type="text" id="firstName" required>
         <div id="firstNameError" class="error"></div>
-      
+        <h2> Dobar dan </h2>
         <label for="lastName">Last Name:</label>
         <input type="text" id="lastName" required>
         <div id="lastNameError" class="error"></div>
